; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/nfs/extr_nfs4_vnops.c_nfs_lock_owner_clear_busy.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/nfs/extr_nfs4_vnops.c_nfs_lock_owner_clear_busy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfs_lock_owner = type { i32, i32 }

@NFS_LOCK_OWNER_BUSY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"nfs_lock_owner_clear_busy\00", align 1
@NFS_LOCK_OWNER_WANT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nfs_lock_owner_clear_busy(%struct.nfs_lock_owner* %0) #0 {
  %2 = alloca %struct.nfs_lock_owner*, align 8
  %3 = alloca i32, align 4
  store %struct.nfs_lock_owner* %0, %struct.nfs_lock_owner** %2, align 8
  %4 = load %struct.nfs_lock_owner*, %struct.nfs_lock_owner** %2, align 8
  %5 = getelementptr inbounds %struct.nfs_lock_owner, %struct.nfs_lock_owner* %4, i32 0, i32 1
  %6 = call i32 @lck_mtx_lock(i32* %5)
  %7 = load %struct.nfs_lock_owner*, %struct.nfs_lock_owner** %2, align 8
  %8 = getelementptr inbounds %struct.nfs_lock_owner, %struct.nfs_lock_owner* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @NFS_LOCK_OWNER_BUSY, align 4
  %11 = and i32 %9, %10
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %15, label %13

13:                                               ; preds = %1
  %14 = call i32 @panic(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  br label %15

15:                                               ; preds = %13, %1
  %16 = load %struct.nfs_lock_owner*, %struct.nfs_lock_owner** %2, align 8
  %17 = getelementptr inbounds %struct.nfs_lock_owner, %struct.nfs_lock_owner* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @NFS_LOCK_OWNER_WANT, align 4
  %20 = and i32 %18, %19
  store i32 %20, i32* %3, align 4
  %21 = load i32, i32* @NFS_LOCK_OWNER_BUSY, align 4
  %22 = load i32, i32* @NFS_LOCK_OWNER_WANT, align 4
  %23 = or i32 %21, %22
  %24 = xor i32 %23, -1
  %25 = load %struct.nfs_lock_owner*, %struct.nfs_lock_owner** %2, align 8
  %26 = getelementptr inbounds %struct.nfs_lock_owner, %struct.nfs_lock_owner* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = and i32 %27, %24
  store i32 %28, i32* %26, align 4
  %29 = load %struct.nfs_lock_owner*, %struct.nfs_lock_owner** %2, align 8
  %30 = getelementptr inbounds %struct.nfs_lock_owner, %struct.nfs_lock_owner* %29, i32 0, i32 1
  %31 = call i32 @lck_mtx_unlock(i32* %30)
  %32 = load i32, i32* %3, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %37

34:                                               ; preds = %15
  %35 = load %struct.nfs_lock_owner*, %struct.nfs_lock_owner** %2, align 8
  %36 = call i32 @wakeup(%struct.nfs_lock_owner* %35)
  br label %37

37:                                               ; preds = %34, %15
  ret void
}

declare dso_local i32 @lck_mtx_lock(i32*) #1

declare dso_local i32 @panic(i8*) #1

declare dso_local i32 @lck_mtx_unlock(i32*) #1

declare dso_local i32 @wakeup(%struct.nfs_lock_owner*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
